test/positive/i40_integers_strings_assignment.cfr
// http://gsd.uwaterloo.ca:8888/question/200/incorrect-assignment-of-integers-to-represent

abstract Entity
    type -> string

E1 : Entity
    [ type = "E1T" ]

E2 : Entity
    [ type = "E1T" ]

E3 : Entity
    [ type = "E1T" ]

E1TEntities -> Entity *
    [ type = "E1T" ]

[ # E1TEntities = 3 ]

// assertion
// [ E1TEntities = E1, E2, E3 ]
