test/failing/positive/i92-initialization-multiple.cfr
// http://gsd.uwaterloo.ca:8888/question/440/incorrect-initialization-of-multiple

abstract Person

p1 : Person
p2 : Person
p3 : Person

people -> Person * = p1, p1, p3

x : integer * = 1, 2, 3